# haller_project

./: CHANGELOG.org  README.md  credentials.json  credentials.txt  meson.build  meson_options.txt
doc/Digest-basierte Authentifikation/: main.tex
include/: md5.h
src/: md5.cpp
src/client/: main.cpp
src/server/: main.cpp
